# free-ai-gateway

./: .env.example  .gitignore  AI_Gateway_Architecture_Doc.md  Dockerfile  KIRO_INTEGRATION.md  README.md  benchmark_router.py  build.sh  localhost.crt  localhost.key  packer.pkr.hcl  providers.json  pyproject.toml  render.yaml  requirements.txt  requirements_dev.txt  response.json  simple_ai_gateway.py  test_new_providers.py  test_nv.py  test_nvidia.py  test_nvidia_dev.py  test_prompt.py  test_ws.py  vercel.json
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
app/: config.py  database.py  db_models.py  dependencies.py  main.py  models.py
app/api/: admin.py  ollama.py
app/api/v1/: audio.py  chat.py  conversations.py  images.py  rag.py  users.py
app/core/: encryption.py  prompts.py  providers.py  rate_limit.py  state.py
app/services/: images.py  rag.py  router.py  search.py
scratch/: clear_db.py  test_image_generation.py  test_omniverse_3d_generation.py  test_search.py
tests/: test_api.py
ui/: .env.production  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vercel.json  vite.config.js
ui/src/: App.jsx  index.css
ui/src/pages/: Admin.jsx  Chat.jsx  Login.jsx
