[project]
name = "free-ai-gateway"
version = "0.1.0"
description = "A multi-provider AI gateway"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "openai>=1.50.0",
    "pydantic>=2.8.0",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "types-aiofiles>=23.2.0.20240106",
]

[tool.pyrefly]
source = ["app", "tests"]
python_interpreter = ".venv/bin/python"
exclude = [".venv", "venv", "node_modules", "ui", ".planning", "__pycache__", ".git"]
